# devmux

./: .gitignore  LICENSE  README.md  RELEASING.md  devmux.yaml  pyproject.toml
.github/workflows/: publish.yml
.learnings/: ERRORS.md
agenix/: __init__.py
agenix/cli/: main.py
agenix/core/: manager.py
agenix/utils/: config.py
devmux/: __init__.py
devmux/cli/: main.py
devmux/core/: manager.py
devmux/utils/: config.py
plan/: plan.md
tests/: conftest.py  test_cli.py  test_config.py  test_manager.py  test_version.py
